implement PickyBuildElement friends in PickyBuildGenerator